2016-09-22  Edward Jones  <ed.jones@embecosm.com>

	 * include/mageec/Database.h (DatabaseTransaction): Rename to
	 SQLTransaction.
	 * lib/Database.cpp: Rename DatabaseTransactions to SQLTransaction

2016-09-22  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/Util.h (Metric): Remove type.
	* include/mageec/Types.h (metricToString stringToMetric):
	Remove functions.

2016-09-22  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/AttributeSet.h (AttributeSet::dump): Added function.
	* include/mageec/Framework.h (Framework::print)
	(Framework::dump): Likewise.
	* include/mageec/TrainedML (TrainedML::print)
	(TrainedML::dump): Likewise.
	* lib/Framework.cpp (Framework::print): Added function implementation.
	* lib/TrainedML.cpp (TrainedML::print): Likewise.

2016-09-22  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/AttributeSet.h (AttributeSet::hash)
	(AttributeSet::operator< AttributeSet::operator==)
	(AttributeSet::operator!= AttributeSet::compare): Add functions.
	* include/mageec/Database.h (Database::getFeatures): Replace with
	Database::getFeatureGroupFeatures.
	(Database::getFeatureSetFeatures): Added function.
	(Database::getFeatureGroupFeatures): Likewise.
	* include/mageec/Result.h (Result::getFeatures)
	(Result::getParameters): Return by const reference instead of
	by-value.
	* lib/Database.cpp (Database::newFeatureSet): Refactor to rely
	on AttributeSet hashing and comparison functionality.
	(Database::newParameterSet): Likewise.
	(Database::getFeatures): Replace with Database::getFeatureSetFeatures
	(Database::getFeatureSetFeatures)
	(Database::getFeatureGroupFeatures): Add functions.
	* lib/C5.cpp (C5Driver::train): Refactor to rely on AttributeSet
	hashing and comparison functionality.

2016-09-21  Edward Jones  <ed.jones@embecosm.com>

	* lib/Database.cpp: Store command for compilation in the database.
	(Database::newCompilation): Add command argument.
	* include/mageec/Database.h